fix(style): on firefox

--- a/web/sass/front/partials/sub.scss
+++ b/web/sass/front/partials/sub.scss
@@ -7,7 +7,9 @@
     margin-bottom: 5px;
   }
 }
-
+.auth_container{
+  height: auto !important;
+}
 .fos_user_registration_register{
   [type="radio"]{
     margin: 0 5px 0 15px;
